Bug 47751 - [bug] eventdemo no display with fullscreen under drm mode
Summary: [bug] eventdemo no display with fullscreen under drm mode
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-23 02:01 UTC by lu hua
Modified: 2012-10-31 02:42 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2012-03-23 02:01:13 UTC
System Environment:
--------------------------
Arch:                 i386
Platform:             sugarbay
wayland: (master) 7746a80e2ab829f16fa328562ec6e5664beb624f
libdrm: (master) c50cc24690938db53cd91ae9ff2fa0958693f80d
macros: (master) c0c42057e0d357c144e7933ee413b522950a0f17
glproto: (master) 29d5b553b30755a25300c30b67d39b37c9a76466
dri2proto: (master) 7fd18b15646a62bd82a4eb0eca60a34c1731813d
xproto: (master) 20202784b9700d973d5301f0cb3243eba99fc349
libX11: (master) abc523fce31fcf2687229697a8eb656e343ecb0c
mesa: (master) e07b1603e24ddd21a61b11390712c4b39d6a3c5c
kbproto: (master) b0f7912512091ea58dfaf8dffb2a658a6afeb96d
libxkbcommon: (master) aaffcef35d692b0c77fe88d63ac6d9c669aad080
pixman: (master) 8a8aabf05c8e6c7b68b68c80e4e73877fd35ce78
cairo: (master) 9bb5b02694e1bbd5c0cdd28606d80fb2d2d701ee
weston: (master) ec323d222cbf8fff30871d79455c88c7096b111e
Kernel:    (drm-intel-next-queued) fa37d39e4c6622d80bd8061d600701bcea1d6870

Bug detailed description:
-----------------------------
Start weston under drm mode, run case eventdemo, select fullscreen mode, no image displays in the screen, the screen is black, system works regularly.
It is good with normal window mode.
Under X mode, It is good with normal window mode. Select fullscreen, the image is littler than normal window mode.

Reproduce steps:
----------------------------
1. start weston under drm mode
2. ./eventdemo
Comment 1 min2 2012-07-04 14:02:07 UTC
This bug is still reproducible:

cairo:               1.12.2-106-g64d65f7
drm:                 libdrm-2.4.36-4-g8fad46b
glproto:             glproto-1.4.15-2-g458a9eb
libvpx:              v1.1.0-126-geab09e3
libxkbcommon:        2cb6c35
mesa:                snb-magic-10742-ge620f3e
pixman:              pixman-0.26.0-43-g4cdf8e9
wayland:             0.94.90-16-g8a02368
weston:              0.94.90-33-gdaf1aec
xf86-video-intel:    2.17.0-959-gf6f43a7
xserver:             xorg-server-1.12.2-92-gfc6979c
Comment 2 Kristian Høgsberg 2012-10-30 22:09:55 UTC
This application wasn't written to support fullscreen mode.


commit efb948846fa598f9d14e6bfbba9591a3bb8819ef
Refs: 1.0.0-26-gefb9488
Author:     Kristian Høgsberg <krh@bitplanet.net>
AuthorDate: Tue Oct 30 18:07:02 2012 -0400
Commit:     Kristian Høgsberg <krh@bitplanet.net>
CommitDate: Tue Oct 30 18:07:02 2012 -0400

    window: Only advertise fullscreen menu item if client supports it

    If the client doesn't set a fullscreen handler, we can't go fullscreen
    and shouldn't advertise that in the window menu.  The menu implementation is
    a little simplistic, so we just move the "Fullscreen" entry to the end of
    the list and don't count it if we don't want it in the menu.

    https://bugs.freedesktop.org/show_bug.cgi?id=47751
    https://bugs.freedesktop.org/show_bug.cgi?id=48106
Comment 3 U. Artie Eoff 2012-10-31 02:42:07 UTC
verified that fullscreen is no longer an option in eventdemo


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.